--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -19,9 +19,9 @@
         <section>
             <h2 class="para">Adventure Time!</h2>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolorem atque sint, ut quis inventore natus corrupti dolorum eius blanditiis. Provident expedita ipsam accusantium quidem quasi aliquid voluptatem vitae aspernatur commodi at nulla praesentium fuga, autem natus. Explicabo, consequatur fugiat ex culpa earum debitis ducimus, delectus sapiente atque sint harum.
+               An adventure is an exciting experience or undertaking that is typically bold, sometimes risky.[1] Adventures may be activities with danger such as traveling, exploring, skydiving, mountain climbing, scuba diving, river rafting, or other extreme sports. Adventures are often undertaken to create psychological arousal or in order to achieve a greater goal, such as the pursuit of knowledge that can only be obtained by such activities.
                 <br><br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia perspiciatis neque explicabo deleniti est suscipit, sunt rerum sint eos, placeat voluptatibus facilis ratione assumenda rem pariatur temporibus expedita quia ex?
+                Outdoor adventurous activities are typically undertaken for the purposes of recreation or excitement: examples are adventure racing and adventure tourism. Adventurous activities can also lead to gains in knowledge, such as those undertaken by explorers and pioneers – the British adventurer Jason Lewis, for example, uses adventures to draw global sustainability lessons from living within finite environmental constraints on expeditions to share with schoolchildren. Adventure education intentionally uses challenging experiences for learning.
                 <br>
             </p>
 
